--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           e: "The acquisition cost was approximately $4.2 billion."
         },
         {
-          q: "After the acquisition, FEI became part of which Thermo Fisher division?",
+          q: "After the acquisition, FEI became part of which Thermo Fisher group?",
           a: ["Laboratory Products", "Analytical Instruments", "Life Sciences Solutions", "Specialty Diagnostics"],
           c: "b",
           e: "FEI was integrated into the Analytical Instruments division."
