--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Electron Microscopy Quiz</title>
-  <input type="text" id="username" placeholder="Enter your screename here" required>
+  <input type="text" id="username" placeholder="Enter your screen name here" required>
   <style>
    body {
     font-family: Arial, sans-serif;
