--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Electron Microscopy Quiz</title>
-  <input type="text" id="username" placeholder="Enter your screen name here" required>
   <style>
    body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -92,7 +91,7 @@
 <body>
   <h1>Electron Microscopy Quiz</h1>
   <div id="timestamp" style="margin-bottom: 1rem;"></div>
-  <input type="text" id="username" placeholder="Enter your screen name here" required>
+  <input type="text" id="username" placeholder="Enter your screen name" required>
   <form id="quizForm">
 
     <!-- BEGIN: Questions -->
